--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -1,76 +1,56 @@
 <!DOCTYPE html>
-<html
-  lang="en"
-  xmlns:th="http://www.thymeleaf.org"
-  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorate="~{layout/layout}"
->
-	<th:block layout:fragment="content">
-		<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
-		<div class="page-wrapper" id="page-wrapper">
-			<div class="container" id="container">
-				<h2>[[${menuNm}]]</h2>
-				<div class="ptag-container">
-					<!-- <span><a href="#"> Home ></a></span> -->
-					<span>[[${navigator}]]</span>
-					<div class="form-container">
-						<div class="form-box">
-							<form id="filter-form" name="form" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
-								<div class="row">
-									<div class="col-auto">
-										<div class="input-group">
-											<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-control search-button-file" placeholder="File Name/Table ID"/>
-											<button type="button"class="btn btn-primary"style="padding: 4px 10px; color: white; font-size: 13px"onclick="main()">
-												Search
-					 						</button>
-										</div>
-									</div>
-									<div class="col text-end">
-										<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px"
-												onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="create-button" onsubmit="return false;">
-											Create
-										</button>
-										<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">
-											Download
-										</button>
-										<button form="new-form" type="button" class="btn btn-secondary" style="padding: 4px 10px; color: white; font-size: 13px"
-												onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="edit-button" onsubmit="return false;">
-											Edit
-										</button>
-									</div>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
+<th:block layout:fragment="content">
+	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
+	<div class="page-wrapper" id="page-wrapper">
+		<div class="container" id="container">
+			<h2>[[${menuNm}]]</h2>
+			<div class="ptag-container">
+				<!-- <span><a href="#"> Home ></a></span> -->
+				<span>[[${navigator}]]</span>
+				<div class="form-container">
+					<div class="form-box">
+						<form id="filter-form" name="form" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
+							<div class="row">
+								<div class="col-sm-6 col-md-3">
+									<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="File Name/Table ID" />
 								</div>
-							</form>
-						</div>
-	 				</div>
-					<div style="padding-top: 2em"></div>
-					<div class="card card-md" id="divMyGrid">
-						<table class="table" align="center" style="width: 1284px; height: 500px"></table>
+								<div class="col-auto">
+									<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
+								</div>
+								<div class="col text-end">
+									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="create-button" onsubmit="return false;">Create</button>
+									<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">Download</button>
+									<button form="new-form" type="button" class="btn btn-secondary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="edit-button" onsubmit="return false;">Edit</button>
+								</div>
+							</div>
+						</form>
 					</div>
-	 			</div>
-				<div class="popupDataForm">
-					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none">
-						Launch modal with form
-					</button>
-					<div class="modal fade" id="exampleModal" tabindex="-1" style="display: none">
-						<div class="modal-dialog modal-small" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title">New report</h5>
-									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div style="padding-top: 2em"></div>
+				<div class="card card-md" id="divMyGrid">
+					<table class="table" align="center" style="width: 1284px; height: 500px"></table>
+				</div>
+			</div>
+			<div class="popupDataForm">
+				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none">Launch modal with form</button>
+				<div class="modal fade" id="exampleModal" tabindex="-1" style="display: none">
+					<div class="modal-dialog modal-small" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">New report</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<div class="row"></div>
+							</div>
+							<div class="modal-footer">
+								<div class="col flex-start">
+									<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal">Cancel</a>
 								</div>
-								<div class="modal-body">
-									<div class="row"></div>
-								</div>
-								<div class="modal-footer">
-									<div class="col flex-start">
-										<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal">Cancel</a>
-									</div>
-									<div class="col-auto me-0 p-1"></div>
-									<div class="col-auto m-0">
-										<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px">
-											Save changes
-										</a>
-									</div>
+								<div class="col-auto me-0 p-1"></div>
+								<div class="col-auto m-0">
+									<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px"> Save changes </a>
 								</div>
 							</div>
 						</div>
@@ -78,35 +58,36 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	<script>
 		function checkData(data) {
-		return parentCheckData(data, check_cols);
+			return parentCheckData(data, check_cols);
 		}
 		
 		function getCsList(input) {
 			console.log("getCsList input : " + input);
 			var option = {
-							id: "SelectList"
-						, type: "post"
-						, url: "/WRKFIL001M0SelectList"
-						, async: false
-						, dataType: "json"
-						, contentType: "application/json; charset=utf-8"
-						, data: input,
-		};
+				id: "SelectList"
+				, type: "post"
+				, url: "/WRKFIL001M0SelectList"
+				, async: false
+				, dataType: "json"
+				, contentType: "application/json; charset=utf-8"
+				, data: input,
+			};
 
 			gf_Transaction(option, fn_callback);
 		}
 
 		function insertCs(addedRow) {
 			var option = {
-							id: "insertList"
-						, type: "post"
-						, url: "/WRKFIL001M0InsertList"
-						, async: false
-						, dataType: "text"
-						, contentType: "application/json; charset=utf-8"
-						, data: addedRow,
+				id: "insertList"
+				, type: "post"
+				, url: "/WRKFIL001M0InsertList"
+				, async: false
+				, dataType: "text"
+				, contentType: "application/json; charset=utf-8"
+				, data: addedRow,
 			};
 
 			gf_Transaction(option, fn_callback);
@@ -115,13 +96,13 @@
 		function fn_updateCs(input) {
 			console.log("updateCs input : " + input);
 			var option = {
-							id          : "updateList"
-						, type        : "post"
-						, url         : "/WRKFIL001M0UpdateList"
-						, async       : true
-						, dataType    : "text"
-						, contentType : "application/json; charset=utf-8"
-						, data        : input
+				id          : "updateList"
+				, type        : "post"
+				, url         : "/WRKFIL001M0UpdateList"
+				, async       : true
+				, dataType    : "text"
+				, contentType : "application/json; charset=utf-8"
+				, data        : input
 			};
 
 			gf_Transaction(option, fn_callback);
@@ -130,13 +111,13 @@
 		function fn_deleteCs(input) {
 			console.log("deleteCs input : " + input);
 			var option = {
-							id          : "deleteList"
-						, type        : "post"
-						, url         : "/WRKFIL001M0DeleteList"
-						, async       : true
- 						, dataType    : "text"
-						, contentType : "application/json; charset=utf-8"
-  						, data        : input
+				id          : "deleteList"
+				, type        : "post"
+				, url         : "/WRKFIL001M0DeleteList"
+				, async       : true
+	 			, dataType    : "text"
+				, contentType : "application/json; charset=utf-8"
+	  			, data        : input
 			};
 
 			gf_Transaction(option, fn_callback);
@@ -211,10 +192,16 @@
 				sortColNumberInSeparateSpan: true,
 				enableAutoSizeColumns: true,
 				editable: false, // grid도 편집가능.. grid 편집 기능 제거 필요..
-				enableAddRow: true,
+				enableAddRow: false,
 	  			asyncEditorLoading: false,
 	   			autoEdit: false,
-	 			autoEditNewRow: false
+	 			autoEditNewRow: false,
+	 			rowHeight: 30,
+	 			getItemMetadata: function(row) {
+                    return {
+                        cssClasses: '' // 모든 행에 대해 CSS 클래스를 빈 문자열로 설정
+                    };
+                }
 		};
 
 		var newRowIds = 0;
@@ -274,6 +261,7 @@
 			function fn_setGrid(data){
 				//dataView = new Slick.Data.DataView( { idField: unqId });
 				dataView = new Slick.Data.DataView();
+				debugger;
 				grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
 
 				// Make the grid respond to DataView change events.
@@ -661,5 +649,5 @@
 			}); 
 		}
 		</script>
-	</th:block>
+</th:block>
 </html>
