--- a/src/main/resources/templates/views/adm/srv/ADMSRV001M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV001M0.html
@@ -78,7 +78,7 @@
                       </li>
                     </ul>
                   </div>
-                    <div class="card-footer">
+                    <div class="card-footer card-footer-transparent">
                       <button class="btn btn-primary w-100" id="basicSubscriptionButton" onclick="useBasicSubscription()"></button>
                     </div>
                   </a>
@@ -143,7 +143,7 @@
                       </li>
                     </ul>
                   </div>
-                    <div class="card-footer">
+                    <div class="card-footer card-footer-transparent">
                       <button class="btn btn-primary w-100" id="premiumSubscriptionButton" onclick="usePremiumSubscription()"></button>
                     </div>
                   </a>
@@ -169,7 +169,7 @@
                       <span class="fs-3">It will be charged by the number of days as many as you used the option.</span>
                     </div>
                   </div>
-                    <div class="card-footer">
+                    <div class="card-footer card-footer-transparent">
                       <button type="button" class="btn btn-outline-secondary w-100" onclick="addOption()">Add</button>
                     </div>
                   </form>
