--- a/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
@@ -1,126 +1,115 @@
-
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
 	<!-- <div class="page"> -->
-		<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
-		
-		<div class="page-wrapper" id="page-wrapper">
-			<div class="container" id="'container">
-				<h2>[[${menuNm}]]</h2>
-				<div class="ptag-container">
-					<span>[[${navigator}]]</span>
+	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 
-					<div class="form-container">
-						<div class="form-box">
-							<form id="filter-form" name="form" method="post" action="/WRKFIL002M0SelectList" onsubmit="return false;">
-								<div class="row">
-									<div class="col-auto">
-										<label  class="form-label" for="fileDropdown"> Select a file:</label>
-										<select class="form-select" id="fileDropdown" style="padding: 3px">
-											<option value="">- options -</option>
-										</select>
-									</div>
+	<div class="page-wrapper" id="page-wrapper">
+		<div class="container" id="'container">
+			<h2>[[${menuNm}]]</h2>
+			<div class="ptag-container">
+				<span>[[${navigator}]]</span>
 
-									<!-- <button type="button" class=" btn btn-pill" onclick="main()">
-	                          Search
-	                        </button> -->
+				<div class="form-container">
+					<div class="form-box">
+						<form id="filter-form" name="form" method="post" action="/WRKFIL002M0SelectList" onsubmit="return false;">
+							<div class="row">
+								<div class="col-auto">
+									<label class="form-label" for="fileDropdown"> Select a file:</label>
+									<select class="form-select" id="fileDropdown" style="padding: 3px">
+										<option value="">- options -</option>
+									</select>
 								</div>
 								<div class="col text-end">
+									<p style="height:27px;">&nbsp;</p>
 									<button type="button" class=" btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px;" form="new-form" onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="create-button" onsubmit="return false;">Create</button>
 									<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px;" id="downloadExcel" form="new-form" onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="edit-button" onsubmit="return false;">Download</button>
-
 									<button type="button" class=" btn btn-secondary" style="padding: 4px 10px; color: white; font-size: 13px;" form="new-form" onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}" data-test="edit-button" onsubmit="return false;">Edit</button>
-
 								</div>
-						</div>
-						
+							</div>
 						</form>
 					</div>
-					<div style="padding-bottom: 25px;"></div>
 				</div>
-				<div class="card card-md">
-					<div align="center" id="divMyGrid">
-						<table 
-							class="table"
-							align="center"
-							style="width: 1284px; height: 500px"
-						>
-						</table>
-					</div>
+				<div style="padding-bottom: 25px;"></div>
+			</div>
+			<div class="card card-md">
+				<div align="center" id="divMyGrid">
+					<table class="table" style="width: 1284px; height: 500px">
+					</table>
 				</div>
-				</div>
-				<div>
-					<div class="popupDataForm">
-						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none;">Launch modal with form</button>
+			</div>
+		</div>
+		<div>
+			<div class="popupDataForm">
+				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none;">Launch modal with form</button>
 
-						<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-							<div class="modal-dialog modal-small" role="document">
-								<div class="modal-content">
-									<div class="modal-header">
-										<h5 class="modal-title">New report</h5>
-										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-									</div>
+				<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog modal-small" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">New report</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
 
-									<div class="modal-body">
-										<div class="row">
-											<div class="col-lg-6">
-												<div class="mb-3">
-													<label class="form-label">Client name</label> <input type="text" class="form-control" />
-												</div>
-												<div class="mb-3">
-													<label class="form-label">Client name</label> <input type="text" class="form-control" />
-												</div>
-												<div class="mb-3">
-													<label class="form-label">Client name</label> <input type="text" class="form-control" />
-												</div>
-												<div class="mb-3">
-													<label class="form-label">Client name</label> <input type="text" class="form-control" />
-												</div>
-												<div class="mb-3">
-													<label class="form-label">Client name</label> <input type="text" class="form-control" />
-												</div>
-												<div class="mb-3">
-													<label class="form-label">Client name</label> <input type="text" class="form-control" />
-												</div>
-											</div>
-											<div class="col-lg-6">
-												<div class="mb-3">
-													<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
-												</div>
-												<div class="mb-3">
-													<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
-												</div>
-												<div class="mb-3">
-													<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
-												</div>
-												<div class="mb-3">
-													<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
-												</div>
-												<div class="mb-3">
-													<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
-												</div>
-											</div>
+							<div class="modal-body">
+								<div class="row">
+									<div class="col-lg-6">
+										<div class="mb-3">
+											<label class="form-label">Client name</label> <input type="text" class="form-control" />
+										</div>
+										<div class="mb-3">
+											<label class="form-label">Client name</label> <input type="text" class="form-control" />
+										</div>
+										<div class="mb-3">
+											<label class="form-label">Client name</label> <input type="text" class="form-control" />
+										</div>
+										<div class="mb-3">
+											<label class="form-label">Client name</label> <input type="text" class="form-control" />
+										</div>
+										<div class="mb-3">
+											<label class="form-label">Client name</label> <input type="text" class="form-control" />
+										</div>
+										<div class="mb-3">
+											<label class="form-label">Client name</label> <input type="text" class="form-control" />
 										</div>
 									</div>
-									<div class="modal-footer">
-										<div class="col flex-start">
-											<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal"> Cancel </a> 
+									<div class="col-lg-6">
+										<div class="mb-3">
+											<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
 										</div>
-										<div class="col-auto me-0 p-1"></div>
-										<div class="col-auto m-0">
-											<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px;"> <path stroke="none" d="M0 0h24v24H0z" fill="none"></path> <path d="M12 5l0 14"></path> <path d="M5 12l14 0"></path> </svg> Save changes
-											</a>
+										<div class="mb-3">
+											<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
+										</div>
+										<div class="mb-3">
+											<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
+										</div>
+										<div class="mb-3">
+											<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
+										</div>
+										<div class="mb-3">
+											<label class="form-label">Reporting period</label> <input type="date" class="form-control" />
 										</div>
 									</div>
+								</div>
+							</div>
+							<div class="modal-footer">
+								<div class="col flex-start">
+									<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal"> Cancel </a>
+								</div>
+								<div class="col-auto me-0 p-1"></div>
+								<div class="col-auto m-0">
+									<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px;"> <path stroke="none" d="M0 0h24v24H0z" fill="none"></path> <path d="M12 5l0 14"></path> <path d="M5 12l14 0"></path> </svg> Save changes
+									</a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			
-		<script>
+		</div>
+	</div>
+
+	<script>
 			function checkData(data) {
 				return parentCheckData(data, check_cols);
 			}
@@ -182,7 +171,7 @@
 				gf_Transaction(option, fn_callback);
 			}
 	    </script>
-		<script>
+	<script>
 	        var selectedValue = "";
 	
 	        $(document).ready(function () {
@@ -262,16 +251,16 @@
 			var xcpt_cols = ["tblId", "regUsrid", "regDt"];
 			var check_cols = [unqId];
 			var columns = [
-				{id: "tblId",			name: "테이블ID",					field: "tblId",		width: 150, sortable: true, editor: Slick.Editors.Text},
-				{ id: "itmNm",		name: "Column Name",				field: "itmNm",		width: 100, sortable: true, editor: Slick.Editors.Text, validator: (value, args) =>  complexValidator(value, args, [ createValidator, noWhitespaceValidator ])},
-				{ id: unqId,			name: "Column ID",				field: unqId,		width: 100, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [ createValidator, noWhitespaceValidator ])},
-				{ id: "dataTpCd",		name: "Data Type",				field: "dataTpCd",	width: 100, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "VARCHAR", value: "VARCHAR" }, { key: "NUMBER", value: "NUMBER" }, { key: "DATE", value: "DATE" }, { key: "TIMESTAMP", value: "TIMESTAMP" } ]);}},
-				{ id: "pkYn",			name: "Primary Key",			field: "pkYn",		width: 100, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" } ]);}},
-				{ id: "vlvlVrfYn",	name: "Validation Use",				field: "vlvlVrfYn",	width: 100, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" } ]);}},
-				{ id: "vlvlCd",		name: "Validation Code",			field: "vlvlCd",	width: 100, sortable: true, editor: Slick.Editors.Text },
-				{ id: "ordSeq",		name: "Sort",						field: "ordSeq",	width: 40, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [ createValidator, noWhitespaceValidator ])},
-				{ id: "itmDsc",		name: "Desc",						field: "itmDsc",	width: 150, sortable: true, editor: Slick.Editors.Text },
-				{ id: "selBasYn",		name: "Load Standard (Y/N)",	field: "selBasYn",	width: 120, sortable: true, editor: Slick.Editors.Text }];
+				{id: "tblId",		name: "테이블ID",					field: "tblId",		width: 120, sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
+				{ id: "itmNm",		name: "Column Name",			field: "itmNm",		width: 120, sortable: true, editor: Slick.Editors.Text, validator: (value, args) =>  complexValidator(value, args, [ createValidator, noWhitespaceValidator ]), headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
+				{ id: "unqId",		name: "Column ID",				field: unqId,		width: 120, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [ createValidator, noWhitespaceValidator ]), headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
+				{ id: "dataTpCd",	name: "Data Type",				field: "dataTpCd",	width: 80, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "VARCHAR", value: "VARCHAR" }, { key: "NUMBER", value: "NUMBER" }, { key: "DATE", value: "DATE" }, { key: "TIMESTAMP", value: "TIMESTAMP" } ]);}, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
+				{ id: "pkYn",		name: "Primary Key",			field: "pkYn",		width: 80, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" } ]);}, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
+				{ id: "vlvlVrfYn",	name: "Validation Use",			field: "vlvlVrfYn",	width: 80, sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" } ]);}, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
+				{ id: "vlvlCd",		name: "Validation Code",		field: "vlvlCd",	width: 100, sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
+				{ id: "ordSeq",		name: "Sort",					field: "ordSeq",	width: 60, sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [ createValidator, noWhitespaceValidator ]), headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
+				{ id: "itmDsc",		name: "Desc",					field: "itmDsc",	width: 170, sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" },
+				{ id: "selBasYn",	name: "Load Standard (Y/N)",	field: "selBasYn",	width: 120, sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }];
 	
 			var options = {
 				enableCellNavigation: true,
@@ -283,10 +272,11 @@
 				sortColNumberInSeparateSpan: true,
 				enableAutoSizeColumns: true,
 				editable: false, // grid도 편집가능.. grid 편집 기능 제거 필요..
-				enableAddRow: true,
+				enableAddRow: false,
 				asyncEditorLoading: false,
 				autoEdit: false,
 				autoEditNewRow: false,
+				rowHeight: 30,
 			};
 	
 			var newRowIds = 0;
@@ -837,5 +827,5 @@
 	          }); 
 			}
 	    </script>
-	</th:block>
+</th:block>
 </html>
