상단 문구 수정 / 매뉴얼 링크 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
 				</a>
 				</span>
 				<span style="padding-left:30px;">
-				<a href="https://www.notion.so/" class="link-light" style="text-decoration: none;">
+				<a href="https://url.kr/4mv5th" class="link-light" style="text-decoration: none;" target="_blank">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-report-search"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h5.697" /><path d="M18 12v-5a2 2 0 0 0 -2 -2h-2" /><path d="M8 3m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" /><path d="M8 11h4" /><path d="M8 15h3" /><path d="M16.5 17.5m-2.5 0a2.5 2.5 0 1 0 5 0a2.5 2.5 0 1 0 -5 0" /><path d="M18.5 19.5l2.5 2.5" /></svg>
 					Manual
 				</a>
@@ -29,12 +29,12 @@
 				<span class="link-yellow"><b>[[${loginDTO.usrNm}]]</b></span>&nbsp;&nbsp;
 				<span class="link-light">works at</span>&nbsp;&nbsp;
 				<span class="link-yellow"><b>[[${loginDTO.compNm}]]</b></span>
-				<th:block th:if="${loginDTO.compNo != '1234567890'}">
+				<th:block th:if="${loginDTO.csNo != '999'}">
 					<span class="link-light">, currently subscribing to</span>&nbsp;&nbsp;
 					<span class="link-yellow"><b>[[${loginDTO.srvcNm}]]</b></span>
 					<span class="link-light">.</span>
 				</th:block>
-				<th:block th:if="${loginDTO.compNo == '1234567890'}">
+				<th:block th:if="${loginDTO.csNo == '999'}">
 					&nbsp;<span class="link-light">as a System Administrator.</span>
 				</th:block>
 			</div>
