--- a/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
@@ -272,7 +272,7 @@
 				sortColNumberInSeparateSpan: true,
 				enableAutoSizeColumns: true,
 				editable: false, // grid도 편집가능.. grid 편집 기능 제거 필요..
-				enableAddRow: false,
+				enableAddRow: true,
 				asyncEditorLoading: false,
 				autoEdit: false,
 				autoEditNewRow: false,
